# stampipes

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  Dockerfile  Makefile  README.md  build_reference.nf  make_browser_load.py  nextflow.config  requirements.pip.txt  requirements.pip3.txt  requirements.txt
.github/: labeler.yml
awk/: bedToWig.awk  illumina_fastq_count.awk  matchreadpairs.awk  merge_adjacent_bed.awk  splitreadpairs.awk
config/: README.md  example.json
config/ucsc_browser/: README.md  example.config
data/adapters/: alladapters.fa
makefiles/: barcodes.mk  fastqc.mk
makefiles/SPOT/: spot-R1-paired.mk  spot-R1.mk  spot-Rboth.mk  spot-single.mk
makefiles/bwa/: bwa_paired.mk  bwa_paired_trimmed.mk  bwa_paired_trimmed_make.mk  bwa_paired_trimmed_umi.mk  bwa_single.mk  bwa_single_make.mk  process_paired_bam.mk  process_unpaired_bam.mk
makefiles/densities/: chrombuckets.mk  density.mk  normalize-density.mk
makefiles/picard/: dups.mk  (+3 more)
modules/: adapter_trimming.nf  bcl2fastq.nf  bwa.nf  cram.nf  fastq.nf  fastqc.nf  umt.nf  utility.nf
processes/: barcode_tally.bash  fastqc_only.bash
programs/: Makefile
programs/src/rust/demux_fastq/: Cargo.toml
programs/src/rust/demux_fastq/src/: demux.rs  fastq.rs  main.rs
scripts/: aggregatecollate.py  aggregateprocess.py  alignprocess.py  apilaneprocess.py  cache.sh  copy_notify.py  create_processing.py  laneprocess.py  max_mismatch.py  rename_by_prefix.py  run_scripts.nf  versions.bash
test_data/: read_names.txt.REMOVED.git-id  test_dnase.bats  test_helper.bash
(+319 files in other folders)
