[package]
name = "demux_fastq"
version = "0.1.0"
authors = ["Jemma Nelson <nelsonjs@altius.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fastq = "*"
structopt = "*"
simple-error = "*"
autocompress = { version = "0.2.2", features = ["gzip"] }
needletail = "*"
flate2 = "*"
seq_io = "*"
